# tournaments

./: .gitignore  .mailmap  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
src/: bracket.rs  contestant.rs  error.rs  lib.rs  match_.rs  match_over_observer.rs  matches.rs  single_elimination.rs  tournament.rs
src/bracket/: current_match.rs  iterator.rs  match_ref.rs  mod.rs
src/bracket_builder/: mod.rs  round_robin.rs  single_elimination.rs
src/contestant/: factory.rs  mod.rs  new_contestant.rs  new_contestant_factory.rs
src/match_/: factory.rs  mod.rs
src/match_contender/: mod.rs  new_contestant.rs  winner.rs
tests/: test_round_robin.rs  test_single_elimination.rs
