[package]
name = "tournaments"
version = "0.1.0-alpha3"
edition = "2021"
authors = ["Nathan Samra"]
description = "Rust library for running tournaments"
repository = "https://github.com/nathans106/tournaments"
documentation = "https://docs.rs/tournaments"
license = "MIT"

[dependencies]
itertools = "0.10.5"
